Added the Water Intoxication Status Effect, improved Status Effect Tooltip on inventory screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -24,52 +24,54 @@
   "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
   "effect.evolution.disoriented": "Disoriented",
   "effect.evolution.dizziness": "Dizziness",
-  "effect.minecraft.absorption.desc": "Grants additional health of 4HP per level\nAdditional health cannot be regenerated",
-  "effect.minecraft.bad_luck.desc": "Decreases your luck by 1 per level\nDo you believe in luck?",
-  "effect.minecraft.bad_omen.desc": "You have a feeling that something bad is coming",
-  "effect.minecraft.blindness.desc": "Your vision is impaired",
-  "effect.minecraft.conduit_power.desc": "You are being affected by a Conduit\nThe Conduit grants the following effects:\n ► Water Breathing\n ► Night Vision\n ► Haste",
-  "effect.minecraft.dolphins_grace.desc": "Increases your swimming speed",
+  "effect.evolution.water_intoxication": "Water Intoxication",
+  "effect.evolution.water_intoxication.desc": "Your excessive water intake pushed the normal balance of electrolytes in the body outside safe limits, potentially disturbing brain functions.",
+  "effect.minecraft.absorption.desc": "Grants 4HP of additional health per level. Additional health cannot be regenerated.",
+  "effect.minecraft.bad_luck.desc": "Decreases your luck by 1 per level.\nDo you believe in luck?",
+  "effect.minecraft.bad_omen.desc": "You have a feeling that something bad is coming.",
+  "effect.minecraft.blindness.desc": "Your vision is impaired.",
+  "effect.minecraft.conduit_power.desc": "You are being affected by a Conduit.\nThe Conduit grants the following effects:\n ► Water Breathing\n ► Night Vision\n ► Haste",
+  "effect.minecraft.dolphins_grace.desc": "Increases your swimming speed.",
   "effect.minecraft.fire_resistance": "Fire Resistance",
-  "effect.minecraft.fire_resistance.desc": "Grants immunity to fire damage",
-  "effect.minecraft.glowing.desc": "You are glowing and your outline can be seen through walls",
-  "effect.minecraft.haste.desc": "Increases attack speed by 10% per level\nIncreases mining speed by 20% per level",
-  "effect.minecraft.health_boost.desc": "Increases your health by 4HP per level",
-  "effect.minecraft.hero_of_the_village": "You saved the village\nPrices will be lower for you\nYou may receive gifts from those you saved",
-  "effect.minecraft.hunger.desc": "You feel hungry and burn more calories",
-  "effect.minecraft.invisibility.desc": "Renders you completely invisible\nIt does not render your equipment invisible, however",
-  "effect.minecraft.jump_boost.desc": "Increases jump strength by 10% per level",
-  "effect.minecraft.levitation.desc": "You become less dense than air and start to float",
-  "effect.minecraft.luck.desc": "Increases your luck by 1 per level\nDo you believe in luck?",
-  "effect.minecraft.mining_fatigue.desc": "Decreases attack speed by 10% per level\nTime taken to break blocks is multiplied by 3^level",
-  "effect.minecraft.nausea.desc": "You feel nauseous, your vision is warped and distorted",
-  "effect.minecraft.night_vision.desc": "Grants the ability to see in the dark",
-  "effect.minecraft.poison.desc.0": "You are poisoned and take 1HP of damage every 25 ticks",
-  "effect.minecraft.poison.desc.1": "You are poisoned and take 1HP of damage every 12 ticks",
-  "effect.minecraft.poison.desc.2": "You are poisoned and take 1HP of damage every 6 ticks",
-  "effect.minecraft.poison.desc.3": "You are poisoned and take 1HP of damage every 3 ticks",
-  "effect.minecraft.poison.desc.4": "You are poisoned and take 1HP of damage every tick",
-  "effect.minecraft.regeneration.desc.0": "Regenerates your health by 1HP every 50 ticks",
-  "effect.minecraft.regeneration.desc.1": "Regenerates your health by 1HP every 25 ticks",
-  "effect.minecraft.regeneration.desc.2": "Regenerates your health by 1HP every 12 ticks",
-  "effect.minecraft.regeneration.desc.3": "Regenerates your health by 1HP every 6 ticks",
-  "effect.minecraft.regeneration.desc.4": "Regenerates your health by 1HP every 3 ticks",
-  "effect.minecraft.regeneration.desc.5": "Regenerates your health by 1HP every tick",
-  "effect.minecraft.resistance.desc": "Reduces all damage taken by 20% per level",
-  "effect.minecraft.saturation.desc": "Reprenishes your hunger meter by 1 per level, per tick\nReplenishes 2 points of saturation per level, per tick",
-  "effect.minecraft.slow_falling.desc": "Decreases gravity acceleration on you by 8 m/s^2",
-  "effect.minecraft.slowness.desc": "Decreases movement speed by 15% per level",
-  "effect.minecraft.speed.desc": "Increases movement speed by 20% per level",
-  "effect.minecraft.strength.desc": "Increases melee damage by 3HP per level",
+  "effect.minecraft.fire_resistance.desc": "Grants immunity to fire damage.",
+  "effect.minecraft.glowing.desc": "You are glowing and your outline can be seen through walls.",
+  "effect.minecraft.haste.desc": "Increases attack speed by 10% per level. Increases mining speed by 20% per level.",
+  "effect.minecraft.health_boost.desc": "Increases your health by 4HP per level.",
+  "effect.minecraft.hero_of_the_village": "You saved the village!\nPrices will be lower for you. You may receive gifts from those you saved.",
+  "effect.minecraft.hunger.desc": "You feel hungry and burn more calories.",
+  "effect.minecraft.invisibility.desc": "Renders you completely invisible. It does not render your equipment invisible, however.",
+  "effect.minecraft.jump_boost.desc": "Increases jump strength by 10% per level.",
+  "effect.minecraft.levitation.desc": "You become less dense than air and start to float.",
+  "effect.minecraft.luck.desc": "Increases your luck by 1 per level.\nDo you believe in luck?",
+  "effect.minecraft.mining_fatigue.desc": "Decreases attack speed by 10% per level. Time taken to break blocks is multiplied by 3^level.",
+  "effect.minecraft.nausea.desc": "You feel nauseous, your vision is warped and distorted.",
+  "effect.minecraft.night_vision.desc": "Grants the ability to see in the dark.",
+  "effect.minecraft.poison.desc.0": "You are poisoned and take 1HP of damage every 25 ticks.",
+  "effect.minecraft.poison.desc.1": "You are poisoned and take 1HP of damage every 12 ticks.",
+  "effect.minecraft.poison.desc.2": "You are poisoned and take 1HP of damage every 6 ticks.",
+  "effect.minecraft.poison.desc.3": "You are poisoned and take 1HP of damage every 3 ticks.",
+  "effect.minecraft.poison.desc.4": "You are poisoned and take 1HP of damage every tick.",
+  "effect.minecraft.regeneration.desc.0": "Regenerates your health by 1HP every 50 ticks.",
+  "effect.minecraft.regeneration.desc.1": "Regenerates your health by 1HP every 25 ticks.",
+  "effect.minecraft.regeneration.desc.2": "Regenerates your health by 1HP every 12 ticks.",
+  "effect.minecraft.regeneration.desc.3": "Regenerates your health by 1HP every 6 ticks.",
+  "effect.minecraft.regeneration.desc.4": "Regenerates your health by 1HP every 3 ticks.",
+  "effect.minecraft.regeneration.desc.5": "Regenerates your health by 1HP every tick.",
+  "effect.minecraft.resistance.desc": "Reduces all damage taken by 20% per level.",
+  "effect.minecraft.saturation.desc": "Reprenishes your hunger meter by 1 per level, per tick. Replenishes 2 points of saturation per level, per tick.",
+  "effect.minecraft.slow_falling.desc": "Decreases gravity acceleration on you by 8 m/s^2.",
+  "effect.minecraft.slowness.desc": "Decreases movement speed by 15% per level.",
+  "effect.minecraft.speed.desc": "Increases movement speed by 20% per level.",
+  "effect.minecraft.strength.desc": "Increases your melee damage by 3HP per level.",
   "effect.minecraft.water_breathing": "Water Breathing",
-  "effect.minecraft.water_breathing.desc": "Grants the ability to breath underwater",
-  "effect.minecraft.weakness.desc": "Decreases melee damage by 4HP per level",
-  "effect.minecraft.wither.desc.0": "You are withering and take 1HP of damage every 40 ticks",
-  "effect.minecraft.wither.desc.1": "You are withering and take 1HP of damage every 20 ticks",
-  "effect.minecraft.wither.desc.2": "You are withering and take 1HP of damage every 10 ticks",
-  "effect.minecraft.wither.desc.3": "You are withering and take 1HP of damage every 5 ticks",
-  "effect.minecraft.wither.desc.4": "You are withering and take 1HP of damage every 2 ticks",
-  "effect.minecraft.wither.desc.5": "You are withering and take 1HP of damage every tick",
+  "effect.minecraft.water_breathing.desc": "Grants the ability to breath underwater.",
+  "effect.minecraft.weakness.desc": "Decreases your melee damage by 4HP per level.",
+  "effect.minecraft.wither.desc.0": "You are withering and take 1HP of damage every 40 ticks.",
+  "effect.minecraft.wither.desc.1": "You are withering and take 1HP of damage every 20 ticks.",
+  "effect.minecraft.wither.desc.2": "You are withering and take 1HP of damage every 10 ticks.",
+  "effect.minecraft.wither.desc.3": "You are withering and take 1HP of damage every 5 ticks.",
+  "effect.minecraft.wither.desc.4": "You are withering and take 1HP of damage every 2 ticks.",
+  "effect.minecraft.wither.desc.5": "You are withering and take 1HP of damage every tick.",
   "COMMENT_ACTIONBAR": "___________________________________________________________________________________________________________ACTIONBAR",
   "evolution.actionbar.hit_stake": "I should hit the stake with a Hammer first",
   "evolution.actionbar.hook": "I should have some rope in my offhand first",
@@ -101,6 +103,7 @@
   "death.attack.wall_impact": "%1$s experienced kinetic energy",
   "death.attack.wall_impact.player": "%1$s was thrown against a wall while fighting %2$s",
   "death.attack.water_impact": "%1$s hit water too hard",
+  "death.attack.water_intoxication": "%1$s died of water intoxication",
   "death.item.fists": "their bare fists",
   "death.fell.accident.generic": "%1$s fell from a high place",
   "death.fell.accident.ladder": "%1$s fell off a ladder",
