--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -24,52 +24,54 @@
   "COMMENT_STATUS_EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
   "effect.evolution.disoriented": "Desorientação",
   "effect.evolution.dizziness": "Tontura",
-  "effect.minecraft.absorption.desc": "Concede vida adicional de 4HP por nível\nVida adicional não pode ser regenerada",
-  "effect.minecraft.bad_luck.desc": "Diminui sua sorte em 1 por nível\nVocê acredita em sorte?",
-  "effect.minecraft.bad_omen.desc": "Você tem uma sensação de que algo ruim está vindo",
-  "effect.minecraft.blindness.desc": "Sua visão está prejudicada",
-  "effect.minecraft.conduit_power.desc": "Você está sendo afetado(a) por um Conduite\nO Conduite concede os seguintes efeitos:\n ► Respiração aquática\n ► Visão Noturna\n ► Pressa",
-  "effect.minecraft.dolphins_grace.desc": "Aumenta sua velocidade de natação",
-  "effect.minecraft.fire_resistance": "Resistência ao fogo",
-  "effect.minecraft.fire_resistance.desc": "Concede imunidade a dano de fogo",
-  "effect.minecraft.glowing.desc": "Você está brilhando e seu contorno pode ser visto através de paredes",
-  "effect.minecraft.haste.desc": "Aumenta a velocidade de ataque em 10% por nível\nAumenta a velocidade de mineração em 20% por nível",
-  "effect.minecraft.health_boost.desc": "Aumenta sua vida em 4HP por nível",
-  "effect.minecraft.hero_of_the_village": "Você salvou a vila\nPreços serão mais baixos para você\nVocê pode receber presentes daqueles que salvou",
-  "effect.minecraft.hunger.desc": "Você se sente faminto e queima mais calorias",
-  "effect.minecraft.invisibility.desc": "Torna você completamente invisível\nNão torna seu equipamento invisível, no entanto",
-  "effect.minecraft.jump_boost.desc": "Aumenta a força do pulo em 10% por nível",
-  "effect.minecraft.levitation.desc": "Você se torna menos denso(a) que o ar e começa a flutuar",
-  "effect.minecraft.luck.desc": "Aumenta sua sorte em 1 por nível\nVocê acredita em sorte?",
-  "effect.minecraft.mining_fatigue.desc": "Diminui a velocidade de ataque em 10% por nível\nO tempo levado para quebrar blocos é multiplicado por 3^nível",
-  "effect.minecraft.nausea.desc": "Você se sente nauseado(a), sua visão é deformada e distorcida",
-  "effect.minecraft.night_vision.desc": "Concede a habilidade de enxergar no escuro",
-  "effect.minecraft.poison.desc.0": "Você está envenenado(a) e toma 1HP de dano a cada 25 ticks",
-  "effect.minecraft.poison.desc.1": "Você está envenenado(a) e toma 1HP de dano a cada 12 ticks",
-  "effect.minecraft.poison.desc.2": "Você está envenenado(a) e toma 1HP de dano a cada 6 ticks",
-  "effect.minecraft.poison.desc.3": "Você está envenenado(a) e toma 1HP de dano a cada 3 ticks",
-  "effect.minecraft.poison.desc.4": "Você está envenenado(a) e toma 1HP de dano a cada tick",
-  "effect.minecraft.regeneration.desc.0": "Regenera a sua vida em 1HP a cada 50 ticks",
-  "effect.minecraft.regeneration.desc.1": "Regenera a sua vida em 1HP a cada 25 ticks",
-  "effect.minecraft.regeneration.desc.2": "Regenera a sua vida em 1HP a cada 12 ticks",
-  "effect.minecraft.regeneration.desc.3": "Regenera a sua vida em 1HP a cada 6 ticks",
-  "effect.minecraft.regeneration.desc.4": "Regenera a sua vida em 1HP a cada 3 ticks",
-  "effect.minecraft.regeneration.desc.5": "Regenera a sua vida em 1HP a cada tick",
-  "effect.minecraft.resistance.desc": "Reduz todo o dano tomado em 20% por nível",
-  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 por nível, por tick\nEnche 2 pontos de saturação por nível, por tick",
-  "effect.minecraft.slow_falling.desc": "Diminui a aceleração da gravidade em você em 8 m/s^2",
-  "effect.minecraft.slowness.desc": "Diminui a velocidade de movimentação em 15% por nível",
-  "effect.minecraft.speed.desc": "Aumenta a velocidade de movimentação em 20% por nível",
-  "effect.minecraft.strength.desc": "Aumenta o dano corpo a corpo em 3HP por nível",
-  "effect.minecraft.water_breathing": "Respiração aquática",
-  "effect.minecraft.water_breathing.desc": "Concede a habilidade de respirar debaixo d'água",
-  "effect.minecraft.weakness.desc": "Diminui o dano corpo a corpo em 4HP por nível",
-  "effect.minecraft.wither.desc.0": "Você está apodrecendo e toma 1HP de dano a cada 40 ticks",
-  "effect.minecraft.wither.desc.1": "Você está apodrecendo e toma 1HP de dano a cada 20 ticks",
-  "effect.minecraft.wither.desc.2": "Você está apodrecendo e toma 1HP de dano a cada 10 ticks",
-  "effect.minecraft.wither.desc.3": "Você está apodrecendo e toma 1HP de dano a cada 5 ticks",
-  "effect.minecraft.wither.desc.4": "Você está apodrecendo e toma 1HP de dano a cada 2 ticks",
-  "effect.minecraft.wither.desc.5": "Você está apodrecendo e toma 1HP de dano a cada tick",
+  "effect.evolution.water_intoxication": "Intoxicação por Água",
+  "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.",
+  "effect.minecraft.absorption.desc": "Concede 4HP de vida adicional por nível. Vida adicional não pode ser regenerada.",
+  "effect.minecraft.bad_luck.desc": "Diminui sua sorte em 1 por nível.\nVocê acredita em sorte?",
+  "effect.minecraft.bad_omen.desc": "Você tem uma sensação de que algo ruim está por vir.",
+  "effect.minecraft.blindness.desc": "Sua visão está prejudicada.",
+  "effect.minecraft.conduit_power.desc": "Você está sendo afetado(a) por um Conduite.\nO Conduite concede os seguintes efeitos:\n ► Respiração aquática\n ► Visão Noturna\n ► Pressa",
+  "effect.minecraft.dolphins_grace.desc": "Aumenta sua velocidade de natação.",
+  "effect.minecraft.fire_resistance": "Resistência ao Fogo",
+  "effect.minecraft.fire_resistance.desc": "Concede imunidade a dano de fogo.",
+  "effect.minecraft.glowing.desc": "Você está brilhando e seu contorno pode ser visto através de paredes.",
+  "effect.minecraft.haste.desc": "Aumenta a velocidade de ataque em 10% por nível. Aumenta a velocidade de mineração em 20% por nível.",
+  "effect.minecraft.health_boost.desc": "Aumenta sua vida em 4HP por nível.",
+  "effect.minecraft.hero_of_the_village": "Você salvou a vila!\nPreços serão mais baixos para você. Você pode receber presentes daqueles que salvou.",
+  "effect.minecraft.hunger.desc": "Você se sente faminto e queima mais calorias.",
+  "effect.minecraft.invisibility.desc": "Torna você completamente invisível. Não torna seu equipamento invisível, no entanto.",
+  "effect.minecraft.jump_boost.desc": "Aumenta a força do pulo em 10% por nível.",
+  "effect.minecraft.levitation.desc": "Você se torna menos denso(a) que o ar e começa a flutuar.",
+  "effect.minecraft.luck.desc": "Aumenta sua sorte em 1 por nível.\nVocê acredita em sorte?",
+  "effect.minecraft.mining_fatigue.desc": "Diminui a velocidade de ataque em 10% por nível. O tempo levado para quebrar blocos é multiplicado por 3^nível",
+  "effect.minecraft.nausea.desc": "Você se sente nauseado(a), sua visão é deformada e distorcida.",
+  "effect.minecraft.night_vision.desc": "Concede a habilidade de enxergar no escuro.",
+  "effect.minecraft.poison.desc.0": "Você está envenenado(a) e toma 1HP de dano a cada 25 ticks.",
+  "effect.minecraft.poison.desc.1": "Você está envenenado(a) e toma 1HP de dano a cada 12 ticks.",
+  "effect.minecraft.poison.desc.2": "Você está envenenado(a) e toma 1HP de dano a cada 6 ticks.",
+  "effect.minecraft.poison.desc.3": "Você está envenenado(a) e toma 1HP de dano a cada 3 ticks.",
+  "effect.minecraft.poison.desc.4": "Você está envenenado(a) e toma 1HP de dano a cada tick.",
+  "effect.minecraft.regeneration.desc.0": "Regenera a sua vida em 1HP a cada 50 ticks.",
+  "effect.minecraft.regeneration.desc.1": "Regenera a sua vida em 1HP a cada 25 ticks.",
+  "effect.minecraft.regeneration.desc.2": "Regenera a sua vida em 1HP a cada 12 ticks.",
+  "effect.minecraft.regeneration.desc.3": "Regenera a sua vida em 1HP a cada 6 ticks.",
+  "effect.minecraft.regeneration.desc.4": "Regenera a sua vida em 1HP a cada 3 ticks.",
+  "effect.minecraft.regeneration.desc.5": "Regenera a sua vida em 1HP a cada tick.",
+  "effect.minecraft.resistance.desc": "Reduz todo o dano tomado em 20% por nível.",
+  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 por nível, por tick. Enche 2 pontos de saturação por nível, por tick.",
+  "effect.minecraft.slow_falling.desc": "Diminui a aceleração da gravidade em você em 8 m/s^2.",
+  "effect.minecraft.slowness.desc": "Diminui a velocidade de movimentação em 15% por nível.",
+  "effect.minecraft.speed.desc": "Aumenta a velocidade de movimentação em 20% por nível.",
+  "effect.minecraft.strength.desc": "Aumenta o seu dano corpo a corpo em 3HP por nível.",
+  "effect.minecraft.water_breathing": "Respiração Aquática",
+  "effect.minecraft.water_breathing.desc": "Concede a habilidade de respirar debaixo d'água.",
+  "effect.minecraft.weakness.desc": "Diminui o seu dano corpo a corpo em 4HP por nível.",
+  "effect.minecraft.wither.desc.0": "Você está apodrecendo e toma 1HP de dano a cada 40 ticks.",
+  "effect.minecraft.wither.desc.1": "Você está apodrecendo e toma 1HP de dano a cada 20 ticks.",
+  "effect.minecraft.wither.desc.2": "Você está apodrecendo e toma 1HP de dano a cada 10 ticks.",
+  "effect.minecraft.wither.desc.3": "Você está apodrecendo e toma 1HP de dano a cada 5 ticks.",
+  "effect.minecraft.wither.desc.4": "Você está apodrecendo e toma 1HP de dano a cada 2 ticks.",
+  "effect.minecraft.wither.desc.5": "Você está apodrecendo e toma 1HP de dano a cada tick.",
   "COMMENT_ACTIONBAR": "___________________________________________________________________________________________________________ACTIONBAR",
   "evolution.actionbar.hit_stake": "Eu deveria cravar a estaca com um martelo antes",
   "evolution.actionbar.hook": "Eu deveria ter um pouco de corda na outra mão antes",
@@ -101,6 +103,7 @@
   "death.attack.wall_impact": "%1$s experimentou a energia cinética",
   "death.attack.wall_impact.player": "%1$s foi jogado(a) contra uma parede enquanto lutava com %2$s",
   "death.attack.water_impact": "%1$s bateu na água com muita força",
+  "death.attack.water_intoxication": "%1$s morreu de intoxicação por água",
   "death.item.fists": "seus próprios punhos",
   "death.fell.accident.generic": "%1$s caiu de um lugar alto",
   "death.fell.accident.ladder": "%1$s caiu de uma escada",
