--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -25,7 +25,7 @@
   "effect.evolution.disoriented": "Desorientação",
   "effect.evolution.dizziness": "Tontura",
   "effect.evolution.water_intoxication": "Intoxicação por Água",
-  "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.",
+  "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.\n\nPode causar:\n ► Náusea\n ► Fraqueza",
   "effect.minecraft.absorption.desc": "Concede 4HP de vida adicional por nível. Vida adicional não pode ser regenerada.",
   "effect.minecraft.bad_luck.desc": "Diminui sua sorte em 1 por nível.\nVocê acredita em sorte?",
   "effect.minecraft.bad_omen.desc": "Você tem uma sensação de que algo ruim está por vir.",
