Added Thirst and implemented the basis for Hunger and Nutrients.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -24,6 +24,10 @@
   "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
   "effect.evolution.disoriented": "Disoriented",
   "effect.evolution.dizziness": "Dizziness",
+  "effect.evolution.hydration": "Hydration",
+  "effect.evolution.hydration.desc": "Replenishes your thirst bar by 1 point per level, per tick.",
+  "effect.evolution.thirst": "Thirst",
+  "effect.evolution.thirst.desc": "You feel thirsty and consume water 5% quicker per level.",
   "effect.evolution.water_intoxication": "Water Intoxication",
   "effect.evolution.water_intoxication.desc": "Your excessive water intake pushed the normal balance of electrolytes in the body outside safe limits, potentially disturbing brain functions.\n\nMay cause:\n ► Nausea\n ► Weakness",
   "effect.minecraft.absorption.desc": "Grants 4HP of additional health per level. Additional health cannot be regenerated.",
@@ -58,7 +62,7 @@
   "effect.minecraft.regeneration.desc.4": "Regenerates your health by 1HP every 3 ticks.",
   "effect.minecraft.regeneration.desc.5": "Regenerates your health by 1HP every tick.",
   "effect.minecraft.resistance.desc": "Reduces all damage taken by 20% per level.",
-  "effect.minecraft.saturation.desc": "Reprenishes your hunger meter by 1 per level, per tick. Replenishes 2 points of saturation per level, per tick.",
+  "effect.minecraft.saturation.desc": "Reprenishes your hunger bar by 1 point per level, per tick.",
   "effect.minecraft.slow_falling.desc": "Decreases gravity acceleration on you by 8 m/s^2.",
   "effect.minecraft.slowness.desc": "Decreases movement speed by 15% per level.",
   "effect.minecraft.speed.desc": "Increases movement speed by 20% per level.",
@@ -91,6 +95,7 @@
   "evolution.subtitle.tree_falling": "Tree falling",
   "evolution.subtitle.wood_collapse": "Wood Collapsing",
   "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
+  "death.attack.dehydration": "%1$s dehydrated to death",
   "death.attack.fall_damage": "%1$s fell from a high place",
   "death.attack.falling_metal": "%1$s was crushed by a falling piece of metal",
   "death.attack.falling_rock": "%1$s was crushed by a collapsing rock",
@@ -182,6 +187,7 @@
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.advancements.remain": "%1$s remaining",
   "evolution.tooltip.clay.mold": " Place while sneaking to mold",
+  "evolution.tooltip.consumable": "When consumed:",
   "evolution.tooltop.container.amount": "%2$s: %1$s",
   "evolution.tooltip.container.capacity": "Capacity: %1$s",
   "evolution.tooltip.container.empty": "Empty",
