--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -24,6 +24,10 @@
   "COMMENT_STATUS_EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
   "effect.evolution.disoriented": "Desorientação",
   "effect.evolution.dizziness": "Tontura",
+  "effect.evolution.hydration": "Hidratação",
+  "effect.evolution.hydration.desc": "Enche sua barra de sede em 1 ponto por nível, por tick.",
+  "effect.evolution.thirst": "Sede",
+  "effect.evolution.thirst.desc": "Você se sente sedento e consome água 5% mais rápido por nível.",
   "effect.evolution.water_intoxication": "Intoxicação por Água",
   "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.\n\nPode causar:\n ► Náusea\n ► Fraqueza",
   "effect.minecraft.absorption.desc": "Concede 4HP de vida adicional por nível. Vida adicional não pode ser regenerada.",
@@ -58,7 +62,7 @@
   "effect.minecraft.regeneration.desc.4": "Regenera a sua vida em 1HP a cada 3 ticks.",
   "effect.minecraft.regeneration.desc.5": "Regenera a sua vida em 1HP a cada tick.",
   "effect.minecraft.resistance.desc": "Reduz todo o dano tomado em 20% por nível.",
-  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 por nível, por tick. Enche 2 pontos de saturação por nível, por tick.",
+  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 ponto por nível, por tick.",
   "effect.minecraft.slow_falling.desc": "Diminui a aceleração da gravidade em você em 8 m/s^2.",
   "effect.minecraft.slowness.desc": "Diminui a velocidade de movimentação em 15% por nível.",
   "effect.minecraft.speed.desc": "Aumenta a velocidade de movimentação em 20% por nível.",
@@ -91,6 +95,7 @@
   "evolution.subtitle.tree_falling": "Árvore caindo",
   "evolution.subtitle.wood_collapse": "Madeira caindo",
   "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
+  "death.attack.dehydration": "%1$s desidratou até a morte",
   "death.attack.fall_damage": "%1$s caiu de um lugar alto",
   "death.attack.falling_metal": "%1$s foi esmagado(a) por um pedaço de metal caindo",
   "death.attack.falling_rock": "%1$s foi esmagado(a) por uma pedra desmoronando",
@@ -182,6 +187,7 @@
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.advancements.remain": "%1$s faltando",
   "evolution.tooltip.clay.mold": " Coloque enquanto agachado para moldar",
+  "evolution.tooltip.consumable": "Quando consumido:",
   "evolution.tooltop.container.amount": "%2$s: %1$s",
   "evolution.tooltip.container.capacity": "Capacidade: %1$s",
   "evolution.tooltip.container.empty": "Vazio",
