Sort effects by alphabetical order in pt-BR translation file.

--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -29,12 +29,12 @@
   "effect.evolution.thirst": "Sede",
   "effect.evolution.thirst.desc": "Você se sente sedento e consome água 5% mais rápido por nível.",
   "effect.evolution.water_intoxication": "Intoxicação por Água",
-  "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.\n\nPode causar:\n ► Náusea\n ► Fraqueza",
+  "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.\n\nPode causar:\n ► Fraqueza\n ► Náusea",
   "effect.minecraft.absorption.desc": "Concede 4HP de vida adicional por nível. Vida adicional não pode ser regenerada.",
   "effect.minecraft.bad_luck.desc": "Diminui sua sorte em 1 por nível.\nVocê acredita em sorte?",
   "effect.minecraft.bad_omen.desc": "Você tem uma sensação de que algo ruim está por vir.",
   "effect.minecraft.blindness.desc": "Sua visão está prejudicada.",
-  "effect.minecraft.conduit_power.desc": "Você está sendo afetado(a) por um Conduite.\nO Conduite concede os seguintes efeitos:\n ► Respiração aquática\n ► Visão Noturna\n ► Pressa",
+  "effect.minecraft.conduit_power.desc": "Você está sendo afetado(a) por um Conduite.\nO Conduite concede os seguintes efeitos:\n ► Pressa\n ► Respiração aquática\n ► Visão Noturna",
   "effect.minecraft.dolphins_grace.desc": "Aumenta sua velocidade de natação.",
   "effect.minecraft.fire_resistance": "Resistência ao Fogo",
   "effect.minecraft.fire_resistance.desc": "Concede imunidade a dano de fogo.",
