--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -143,6 +143,7 @@
   "evolution.advancements.general.knapping.description": "Use uma pedra num bloco de lascar para transformá-lo em algo útil",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.knapping": "Lascando",
+  "evolution.ingamemenu.modoptions": "Opções de Mods...",
   "evolution.puzzle.attachment_type": "Tipo de conexão:",
   "evolution.puzzle.checkBB": "Checar caixa delimitadora:",
   "evolution.puzzle.false": "FALSO",
