Improved Controls Screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -144,6 +144,17 @@
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.knapping": "Knapping",
   "evolution.ingamemenu.modoptions": "Mod Options...",
+  "evolution.options.controls.az": "A→Z",
+  "evolution.options.controls.category": "Category",
+  "evolution.options.controls.confirmReset": "Click to Confirm Reset!",
+  "evolution.options.controls.key": "Key",
+  "evolution.options.controls.none": "None",
+  "evolution.options.controls.search": "Search",
+  "evolution.options.controls.showAll": "Show All",
+  "evolution.options.controls.showConflicts": "Show Conflicts",
+  "evolution.options.controls.showUnbound": "Show Unbound",
+  "evolution.options.controls.sort": "Sort: %1$s",
+  "evolution.options.controls.za": "Z→A",
   "evolution.puzzle.attachment_type": "Attachment Type:",
   "evolution.puzzle.checkBB": "Check Bounding Box:",
   "evolution.puzzle.false": "FALSE",
