--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -144,6 +144,17 @@
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.knapping": "Lascando",
   "evolution.ingamemenu.modoptions": "Opções de Mods...",
+  "evolution.options.controls.az": "A→Z",
+  "evolution.options.controls.category": "Categoria",
+  "evolution.options.controls.confirmReset": "Clique para Confirmar!",
+  "evolution.options.controls.key": "Tecla",
+  "evolution.options.controls.none": "Nenhuma",
+  "evolution.options.controls.search": "Pesquisar",
+  "evolution.options.controls.showAll": "Mostrar Tudo",
+  "evolution.options.controls.showConflicts": "Mostrar Conflitos",
+  "evolution.options.controls.showUnbound": "Mostrar Indefinidas",
+  "evolution.options.controls.sort": "Ordem: %1$s",
+  "evolution.options.controls.za": "Z→A",
   "evolution.puzzle.attachment_type": "Tipo de conexão:",
   "evolution.puzzle.checkBB": "Checar caixa delimitadora:",
   "evolution.puzzle.false": "FALSO",
@@ -434,7 +445,7 @@
   "block.evolution.polished_stone_schist": "Xisto Polido",
   "block.evolution.polished_stone_shale": "Folhelho Polido",
   "block.evolution.polished_stone_slate": "Ardósia Polida",
-  "block.evolution.puzzle": "Bloco de Quebra-cabeça",
+  "block.evolution.puzzle": "Bloco de Quebra-Cabeça",
   "block.evolution.rock_andesite": "Pedra de Andesito",
   "block.evolution.rock_basalt": "Pedra de Basalto",
   "block.evolution.rock_chalk": "Pedra de Giz",
